// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`oas operation openapi v2 1`] = `
Array [
  Object {
    "description": "",
    "extensions": Object {
      "x-another": Object {
        "property": "value",
      },
      "x-test": true,
    },
    "id": "http_operation-abc-post-/pets",
    "iid": "addPet",
    "method": "post",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "http_media-http_request_body-http_operation-abc-post-/pets-application/json",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9007199254740991,
                  "minimum": -9007199254740991,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "http_media-http_request_body-http_operation-abc-post-/pets-application/xml",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9007199254740991,
                  "minimum": -9007199254740991,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "http_request_body-http_operation-abc-post-/pets",
        "name": "body",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Invalid input",
        "headers": Array [],
        "id": "http_response-http_operation-abc-post-/pets-405-application/json-application/xml",
      },
    ],
    "security": Array [
      Array [
        Object {
          "extensions": Object {},
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "http_security-abc-requirement-petstore_auth-0-",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "securityDeclarationType": "declared",
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Add a new pet to the store",
    "tags": Array [
      Object {
        "id": "tag-pet",
        "name": "pet",
      },
    ],
  },
  Object {
    "extensions": Object {},
    "id": "http_operation-abc-get-/pets",
    "method": "get",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [
        Object {
          "id": "http_header-abc-parameter-rate-limit",
          "name": "Rate-Limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_header-abc-parameter-rate-limit-",
            },
          },
          "style": "simple",
        },
      ],
      "path": Array [],
      "query": Array [
        Object {
          "id": "http_query-abc-skip",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-skip-",
            },
          },
          "style": "unspecified",
        },
        Object {
          "id": "http_query-abc-limit",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-limit-",
            },
          },
          "style": "unspecified",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [],
        "description": "",
        "headers": Array [],
        "id": "http_response-http_operation-abc-get-/pets-200",
      },
    ],
    "security": Array [],
    "securityDeclarationType": "inheritedFromService",
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "extensions": Object {},
    "id": "http_operation-abc-options-/pets",
    "method": "options",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [
        Object {
          "id": "http_header-abc-parameter-rate-limit",
          "name": "Rate-Limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_header-abc-parameter-rate-limit-",
            },
          },
          "style": "simple",
        },
      ],
      "path": Array [],
      "query": Array [
        Object {
          "id": "http_query-abc-skip",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-skip-",
            },
          },
          "style": "unspecified",
        },
        Object {
          "id": "http_query-abc-limit",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-limit-",
            },
          },
          "style": "unspecified",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [],
        "description": "",
        "headers": Array [
          Object {
            "description": "Allowed clients",
            "id": "http_header-http_response-http_operation-abc-options-/pets-200-parameter-Allow",
            "name": "Allow",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "type": "string",
              "x-stoplight": Object {
                "id": "schema-http_header-http_response-http_operation-abc-options-/pets-200-parameter-Allow-",
              },
            },
            "style": "simple",
          },
          Object {
            "description": "Remaining requests",
            "id": "http_header-http_response-http_operation-abc-options-/pets-200-parameter-X-Rate-Limit",
            "name": "X-Rate-Limit",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "format": "int64",
              "maximum": 9007199254740991,
              "minimum": -9007199254740991,
              "type": "number",
              "x-stoplight": Object {
                "explicitProperties": Array [
                  "type",
                  "format",
                ],
                "id": "schema-http_header-http_response-http_operation-abc-options-/pets-200-parameter-X-Rate-Limit-",
              },
            },
            "style": "simple",
          },
        ],
        "id": "http_response-http_operation-abc-options-/pets-200",
      },
    ],
    "security": Array [],
    "securityDeclarationType": "inheritedFromService",
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "description": "",
    "extensions": Object {},
    "id": "http_operation-abc-delete-/pets",
    "method": "delete",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "http_response-http_operation-abc-delete-/pets-400",
      },
      Object {
        "code": "404",
        "contents": Array [],
        "description": "Pet not found",
        "headers": Array [],
        "id": "http_response-http_operation-abc-delete-/pets-404",
      },
    ],
    "security": Array [],
    "securityDeclarationType": "inheritedFromService",
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Deletes a pet",
    "tags": Array [],
  },
  Object {
    "description": "",
    "extensions": Object {},
    "id": "http_operation-abc-put-/pet/{}",
    "iid": "updatePet",
    "method": "put",
    "path": "/pet/{petId}",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "http_media-http_request_body-http_operation-abc-put-/pet/{}-application/json",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9007199254740991,
                  "minimum": -9007199254740991,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "http_media-http_request_body-http_operation-abc-put-/pet/{}-application/xml",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/definitions/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9007199254740991,
                  "minimum": -9007199254740991,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "http_request_body-http_operation-abc-put-/pet/{}",
        "name": "body",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [
        Object {
          "id": "http_path_param-abc-pet-id",
          "name": "petId",
          "required": true,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_path_param-abc-pet-id-",
            },
          },
          "style": "simple",
        },
      ],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "http_response-http_operation-abc-put-/pet/{}-400-application/json-application/xml",
      },
      Object {
        "code": "404",
        "contents": Array [
          Object {
            "examples": Array [],
            "id": "http_media-http_response-abc-404-application/json-application/xml-application/xml",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Error",
              },
            },
          },
          Object {
            "examples": Array [],
            "id": "http_media-http_response-abc-404-application/json-application/xml-application/json",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Error",
              },
            },
          },
        ],
        "description": "Our shared 404 response.",
        "headers": Array [],
        "id": "http_response-abc-404-application/json-application/xml",
      },
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Validation exception",
        "headers": Array [],
        "id": "http_response-http_operation-abc-put-/pet/{}-405-application/json-application/xml",
      },
    ],
    "security": Array [
      Array [
        Object {
          "extensions": Object {},
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "http_security-abc-requirement-petstore_auth-0-",
          "key": "petstore_auth",
          "type": "oauth2",
        },
        Object {
          "extensions": Object {
            "x-security-extension": Object {
              "hello": "world",
            },
          },
          "id": "http_security-abc-requirement-api_key-1-",
          "in": "header",
          "key": "api_key",
          "name": "api_key",
          "type": "apiKey",
        },
      ],
      Array [
        Object {
          "extensions": Object {
            "x-security-extension": Object {
              "hello": "world",
            },
          },
          "id": "http_security-abc-requirement-api_key-0-",
          "in": "header",
          "key": "api_key",
          "name": "api_key",
          "type": "apiKey",
        },
      ],
      Array [],
    ],
    "securityDeclarationType": "declared",
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Update an existing pet",
    "tags": Array [
      Object {
        "id": "tag-pet",
        "name": "pet",
      },
    ],
  },
]
`;

exports[`oas operation openapi v3 1`] = `
Array [
  Object {
    "description": "",
    "extensions": Object {
      "x-another": Object {
        "property": "value",
      },
      "x-test": true,
    },
    "id": "http_operation-abc-post-/pets",
    "iid": "addPet",
    "method": "post",
    "path": "/pets",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [
              Object {
                "id": "example-http_media-http_request_body-abc-Pet-application/json-Dog",
                "key": "Dog",
                "summary": "A dog example",
                "value": Object {
                  "name": "Leo",
                  "photoUrls": Array [],
                },
              },
              Object {
                "externalValue": "https://stoplight.io/pets/cat",
                "id": "example-http_media-http_request_body-abc-Pet-application/json-Cat",
                "key": "Cat",
                "summary": "A cat example",
              },
            ],
            "id": "http_media-http_request_body-abc-Pet-application/json",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9007199254740991,
                  "minimum": -9007199254740991,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "nullableEnumExplicit": Object {
                  "enum": Array [
                    null,
                    "foo",
                    "bar",
                  ],
                  "type": Array [
                    "string",
                    "null",
                  ],
                },
                "nullableEnumImplicit": Object {
                  "enum": Array [
                    "foo",
                    "bar",
                    null,
                  ],
                  "type": Array [
                    "string",
                    "null",
                  ],
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "http_media-http_request_body-abc-Pet-application/xml",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9007199254740991,
                  "minimum": -9007199254740991,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "nullableEnumExplicit": Object {
                  "enum": Array [
                    null,
                    "foo",
                    "bar",
                  ],
                  "type": Array [
                    "string",
                    "null",
                  ],
                },
                "nullableEnumImplicit": Object {
                  "enum": Array [
                    "foo",
                    "bar",
                    null,
                  ],
                  "type": Array [
                    "string",
                    "null",
                  ],
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "http_request_body-abc-Pet",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Invalid input",
        "headers": Array [],
        "id": "http_response-http_operation-abc-post-/pets-405",
      },
    ],
    "security": Array [
      Array [
        Object {
          "extensions": Object {},
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "http_security-abc-requirement-petstore_auth-0-implicit::write:pets|implicit::read:pets",
          "key": "petstore_auth",
          "type": "oauth2",
        },
      ],
    ],
    "securityDeclarationType": "declared",
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Add a new pet to the store",
    "tags": Array [
      Object {
        "id": "tag-pet",
        "name": "pet",
      },
    ],
  },
  Object {
    "extensions": Object {},
    "id": "http_operation-abc-get-/pets",
    "method": "get",
    "path": "/pets",
    "request": Object {
      "cookie": Array [],
      "headers": Array [],
      "path": Array [],
      "query": Array [
        Object {
          "examples": Array [],
          "explicitProperties": Array [
            "in",
            "name",
            "schema",
          ],
          "id": "http_query-abc-skip",
          "name": "skip",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-skip-",
            },
          },
          "style": "form",
        },
        Object {
          "examples": Array [],
          "explicitProperties": Array [
            "name",
            "in",
            "schema",
          ],
          "id": "http_query-abc-limit",
          "name": "limit",
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_query-abc-limit-",
            },
          },
          "style": "form",
        },
      ],
    },
    "responses": Array [
      Object {
        "code": "200",
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "http_media-http_response-http_operation-abc-get-/pets-200-*/*",
            "mediaType": "*/*",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {},
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-http_media-http_response-http_operation-abc-get-/pets-200-*/*-",
              },
            },
          },
        ],
        "description": "OK",
        "headers": Array [],
        "id": "http_response-http_operation-abc-get-/pets-200",
      },
    ],
    "security": Array [],
    "securityDeclarationType": "inheritedFromService",
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "List pets",
    "tags": Array [],
  },
  Object {
    "callbacks": Array [
      Object {
        "extensions": Object {},
        "id": "http_callback-undefined-MyEvent-post-{$request.body#/callbackUrl}",
        "key": "MyEvent",
        "method": "post",
        "path": "{$request.body#/callbackUrl}",
        "request": Object {
          "body": Object {
            "contents": Array [
              Object {
                "encodings": Array [],
                "examples": Array [],
                "id": "http_media-http_request_body-http_callback-undefined-MyEvent-post-{$request.body#/callbackUrl}-application/json",
                "mediaType": "application/json",
                "schema": Object {
                  "$schema": "http://json-schema.org/draft-07/schema#",
                  "properties": Object {
                    "message": Object {
                      "examples": Array [
                        "Some event happened",
                      ],
                      "type": "string",
                    },
                  },
                  "required": Array [
                    "message",
                  ],
                  "type": "object",
                  "x-stoplight": Object {
                    "id": "schema-http_media-http_request_body-http_callback-undefined-MyEvent-post-{$request.body#/callbackUrl}-application/json-",
                  },
                },
              },
            ],
            "id": "http_request_body-http_callback-undefined-MyEvent-post-{$request.body#/callbackUrl}",
            "required": true,
          },
          "cookie": Array [],
          "headers": Array [],
          "path": Array [],
          "query": Array [],
        },
        "responses": Array [
          Object {
            "code": "200",
            "contents": Array [],
            "description": "Your server returns this code if it accepts the callback",
            "headers": Array [],
            "id": "http_response-http_callback-undefined-MyEvent-post-{$request.body#/callbackUrl}-200",
          },
        ],
        "security": Array [],
        "securityDeclarationType": "inheritedFromService",
        "servers": Array [],
        "tags": Array [],
      },
    ],
    "description": "",
    "extensions": Object {},
    "id": "http_operation-abc-put-/pet/{}",
    "iid": "updatePet",
    "method": "put",
    "path": "/pet/{petId}",
    "request": Object {
      "body": Object {
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [
              Object {
                "id": "example-http_media-http_request_body-abc-Pet-application/json-Dog",
                "key": "Dog",
                "summary": "A dog example",
                "value": Object {
                  "name": "Leo",
                  "photoUrls": Array [],
                },
              },
              Object {
                "externalValue": "https://stoplight.io/pets/cat",
                "id": "example-http_media-http_request_body-abc-Pet-application/json-Cat",
                "key": "Cat",
                "summary": "A cat example",
              },
            ],
            "id": "http_media-http_request_body-abc-Pet-application/json",
            "mediaType": "application/json",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9007199254740991,
                  "minimum": -9007199254740991,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "nullableEnumExplicit": Object {
                  "enum": Array [
                    null,
                    "foo",
                    "bar",
                  ],
                  "type": Array [
                    "string",
                    "null",
                  ],
                },
                "nullableEnumImplicit": Object {
                  "enum": Array [
                    "foo",
                    "bar",
                    null,
                  ],
                  "type": Array [
                    "string",
                    "null",
                  ],
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "http_media-http_request_body-abc-Pet-application/xml",
            "mediaType": "application/xml",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "category": Object {
                  "$ref": "#/components/schemas/Category",
                },
                "id": Object {
                  "format": "int64",
                  "maximum": 9007199254740991,
                  "minimum": -9007199254740991,
                  "type": "integer",
                  "x-stoplight": Object {
                    "explicitProperties": Array [
                      "type",
                      "format",
                    ],
                  },
                },
                "name": Object {
                  "examples": Array [
                    "doggie",
                  ],
                  "type": "string",
                },
                "nullableEnumExplicit": Object {
                  "enum": Array [
                    null,
                    "foo",
                    "bar",
                  ],
                  "type": Array [
                    "string",
                    "null",
                  ],
                },
                "nullableEnumImplicit": Object {
                  "enum": Array [
                    "foo",
                    "bar",
                    null,
                  ],
                  "type": Array [
                    "string",
                    "null",
                  ],
                },
                "photoUrls": Object {
                  "items": Object {
                    "type": "string",
                  },
                  "type": "array",
                  "xml": Object {
                    "name": "photoUrl",
                    "wrapped": true,
                  },
                },
                "status": Object {
                  "description": "pet status in the store",
                  "enum": Array [
                    "available",
                    "pending",
                    "sold",
                  ],
                  "type": "string",
                },
              },
              "required": Array [
                "name",
                "photoUrls",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Pet",
              },
              "xml": Object {
                "name": "Pet",
              },
            },
          },
        ],
        "description": "Pet object that needs to be added to the store",
        "id": "http_request_body-abc-Pet",
        "required": true,
      },
      "cookie": Array [],
      "headers": Array [],
      "path": Array [
        Object {
          "examples": Array [],
          "explicitProperties": Array [
            "name",
            "in",
            "required",
            "schema",
          ],
          "id": "http_path_param-abc-pet-id",
          "name": "petId",
          "required": true,
          "schema": Object {
            "$schema": "http://json-schema.org/draft-07/schema#",
            "type": "string",
            "x-stoplight": Object {
              "id": "schema-http_path_param-abc-pet-id-",
            },
          },
          "style": "simple",
        },
      ],
      "query": Array [],
    },
    "responses": Array [
      Object {
        "code": "400",
        "contents": Array [],
        "description": "Invalid ID supplied",
        "headers": Array [],
        "id": "http_response-http_operation-abc-put-/pet/{}-400",
      },
      Object {
        "code": "404",
        "contents": Array [
          Object {
            "encodings": Array [],
            "examples": Array [],
            "id": "http_media-http_response-abc-404-*/*",
            "mediaType": "*/*",
            "schema": Object {
              "$schema": "http://json-schema.org/draft-07/schema#",
              "properties": Object {
                "code": Object {
                  "type": "string",
                },
                "message": Object {
                  "type": "string",
                },
              },
              "required": Array [
                "code",
              ],
              "type": "object",
              "x-stoplight": Object {
                "id": "schema-abc-Error",
              },
            },
          },
        ],
        "description": "Our shared 404 response.",
        "headers": Array [],
        "id": "http_response-abc-404",
      },
      Object {
        "code": "405",
        "contents": Array [],
        "description": "Validation exception",
        "headers": Array [],
        "id": "http_response-http_operation-abc-put-/pet/{}-405",
      },
    ],
    "security": Array [
      Array [
        Object {
          "extensions": Object {},
          "flows": Object {
            "implicit": Object {
              "authorizationUrl": "https://petstore.swagger.io/oauth/dialog",
              "scopes": Object {
                "read:pets": "read your pets",
                "write:pets": "modify pets in your account",
              },
            },
          },
          "id": "http_security-abc-requirement-petstore_auth-0-implicit::write:pets|implicit::read:pets",
          "key": "petstore_auth",
          "type": "oauth2",
        },
        Object {
          "extensions": Object {
            "x-security-extension": Object {
              "hello": "world",
            },
          },
          "id": "http_security-abc-requirement-api_key-1-",
          "in": "header",
          "key": "api_key",
          "name": "api_key",
          "type": "apiKey",
        },
      ],
      Array [
        Object {
          "extensions": Object {
            "x-security-extension": Object {
              "hello": "world",
            },
          },
          "id": "http_security-abc-requirement-api_key-0-",
          "in": "header",
          "key": "api_key",
          "name": "api_key",
          "type": "apiKey",
        },
      ],
      Array [],
    ],
    "securityDeclarationType": "declared",
    "servers": Array [
      Object {
        "id": "http_server-abc-https://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "https://petstore.swagger.io/v2",
      },
      Object {
        "id": "http_server-abc-http://petstore.swagger.io/v2",
        "name": "Swagger Petstore",
        "url": "http://petstore.swagger.io/v2",
      },
    ],
    "summary": "Update an existing pet",
    "tags": Array [
      Object {
        "id": "tag-pet",
        "name": "pet",
      },
    ],
  },
]
`;
